--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.25.4",
@@ -22,6 +23,7 @@
     "axios": "^1.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cypress-real-events": "^1.10.3",
     "date-fns": "^2.30.0",
     "lucide-react": "^0.287.0",
     "next": "13.5.4",
@@ -43,6 +45,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
     "cypress": "^13.3.2",
+    "cypress-social-logins": "^1.14.1",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
     "postcss": "^8",
