--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "cypress:open": "cypress open"
   },
   "dependencies": {
-    "@clerk/nextjs": "4.25.4",
+    "@clerk/nextjs": "4.29.3",
     "@hookform/resolvers": "3.3.2",
     "@prisma/client": "5.4.2",
     "@radix-ui/react-alert-dialog": "1.0.5",
@@ -21,13 +21,13 @@
     "@radix-ui/react-select": "2.0.0",
     "@radix-ui/react-slot": "1.0.2",
     "@tanstack/react-table": "8.10.7",
-    "@types/papaparse": "^5.3.13",
+    "@types/papaparse": "5.3.13",
     "axios": "1.5.1",
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
     "cypress-real-events": "1.10.3",
     "date-fns": "2.30.0",
-    "export-from-json": "^1.7.3",
+    "export-from-json": "1.7.3",
     "lucide-react": "0.287.0",
     "next": "13.5.4",
     "next-themes": "0.2.1",
@@ -42,7 +42,7 @@
     "recharts": "2.10.1",
     "tailwind-merge": "1.14.0",
     "tailwindcss-animate": "1.0.7",
-    "xlsx": "^0.18.5",
+    "xlsx": "0.18.5",
     "zod": "3.22.4",
     "zustand": "4.4.3"
   },
